# BLL

./: .gitignore  .vcpkg-deps.txt  .vcpkg_dependencies.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/: Main.cpp
src/AI/: Activation.cpp  Activation.h  Common.h  Console.cpp  Console.h  Layer.cpp  Layer.h  LayerDescriptor.h  Math.cpp  Math.h  Metrics.cpp  Metrics.h  Network.cpp  Network.h  NetworkDescriptor.h  Random.cpp  Random.h  TrainingData.h  Types.cpp  Types.h  Util.h
src/AI/Util/: ImGuiMatrixRenderer.cpp  ImGuiMatrixRenderer.h  Path.cpp  Path.h  Random.cpp  Random.h  Util.cpp  Util.h
src/MNIST/: MNISTHelper.cpp  MNISTHelper.h
src/Window/: Window.cpp  Window.h
